--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,12 @@
 [tool.poetry]
 name = "cachestore"
 version = "0.1.0"
-description = ""
+description = "Function Cache Management Tool for Python"
 authors = ["altescy <altescy@fastmail.com>"]
+license = "MIT License"
+readme = "README.md"
+homepage = "https://github.com/altescy/cachestore"
+keywords=["python", "cache"]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
