add function configuration feature

--- a/examples/cachestore.ini
+++ b/examples/cachestore.ini
@@ -6,3 +6,9 @@ formatter = cachestore.PickleFormatter
 [square:cache]
 storage.root = mycachestore
 storage.openfn = gzip.open
+
+[square:cache square.ignored_square_from_config]
+ignore = y
+
+[square:cache square.disabled_square_from_config]
+disable = true
