add formatter option for function settings

--- a/examples/cachestore.ini
+++ b/examples/cachestore.ini
@@ -12,3 +12,6 @@ ignore = y
 
 [square:cache square.disabled_square_from_config]
 disable = true
+
+[square:cache square.json_formatted_square_from_comfing]
+formatter = square.JsonFormatter
