--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ keywords=["python", "cache"]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
+dill = {version = "*", optional = true}
 
 [tool.poetry.dev-dependencies]
 python-language-server = "^0.36.2"
