--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "cachestore"
 version = "0.3.1"
 description = "Function Cache Management Tool for Python"
-authors = ["altescy <altescy@fastmail.com>"]
+authors = ["altescy <me@altescy.jp>"]
 license = "MIT License"
 readme = "README.md"
 homepage = "https://github.com/altescy/cachestore"
@@ -12,14 +12,22 @@ keywords=["python", "cache"]
 python = ">=3.8,<4.0"
 dill = {version = "*", optional = true}
 
-[tool.poetry.dev-dependencies]
-python-language-server = "^0.36.2"
-pytest = "^7.4.4"
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.3"
 pysen = "^0.11.0"
-black = "^23.12.1"
+black = "^24.8.0"
 isort = "^5.13.2"
 flake8 = "^5.0.4"
-mypy = "^1.10.0"
+mypy = "^1.11.2"
+
+[tool.poetry.group.lsp]
+optional = true
+
+[tool.poetry.group.lsp.dependencies]
+python-lsp-server = { version="^1.0.0", extras=["flake8"] }
+pylsp-mypy = "^0.6.9"
+python-lsp-isort = "^0.2.0"
+python-lsp-black = "^2.0.0"
 
 [tool.poetry.scripts]
 cachestore = "cachestore.__main__:run"
